Lab4/lab4.txt
Name: Mudith Mallajosyula
UID:  404937201
Lab   2


First, I downloaded and installed the bugged version of coreutils in the
directory ~/Documents/CS35L/Lab4/coreutils-with-bug

   mkdir coreutils-with-bug cd coreutils-with-bug

   wget
   web.cs.ucla.edu/classes/fall18/cs35L/assign/coreutils-with-bug.tar.gz
   tar -xvf coreutils-with-bug.tar.gz
   cd coreutils-with-bug.tar.gz
   ./configure CFLAGS="-g -O0" --prefix=/u/cs/ugrad/mudith/ <...> /coreutils-with-bug
   make

This results in the error:
   
   In file included from utimecmp.c:41:0:
   utimens.h:2:5: error: conflicting types for 'futimens'
    int futimens (int, char const *, struct timespec const [2]);
         ^
   In file included from utimecmp.h:25:0,
	            from utimecmp.c:25:
   /usr/include/sys/stat.h:374:12: note: previous declaration of 'futimens' was here
    extern int futimens (int __fd, __const struct timespec __times[2]) __THROW;
			               ^
This error occurs because there is already an installed "futimens" function installed.
To fix this error, we use the renaming patch as follows(from the coreutils directory):

   wget web.cs.ucla.edu/classes/fall18/cs35L/assign/coreutils.diff
   patch -p0 < coreutils.diff

This patch affects the files:

   lib/utimens.c
   lib/utimens.h
   src/copy.c
   src/tee.c
   src/touch.c

Running the make command again, we find that no errors occur.  To reproduce the
bug, we run the script given in the assignment spec,modified with the path to
the buggy ls

   tmp=$(mkdemp -d)
   cd $tmp
   touch -d '1918-11-11 11:00 GMT' wwi-armistice
   touch now
   sleep 1
   touch now1
   TZ=UTCO <path-to-buggy-ls-install>/bin/ls -lt --full-time wwi-armistice now now1 

This results in the following:

   -rw-r--r-- 1 mudith csugrad 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice
   -rw-r--r-- 1 mudith csugrad 0 2018-11-02 22:53:13.105953014 +0000 now1
   -rw-r--r-- 1 mudith csugrad 0 2018-11-02 22:53:03.009513492 +0000 now

The list should be ordered from newest to oldest, but for some reason the armistice
file is listed first.

We can inspect this behavior with gdb. From the tmp folder, we run

   gdb ~/Documents/CS35L/Lab4/coreutils-with-bug/bin/ls

Once in gdb, we set a breakpoint at the main function,

   break ls.c:main

And then we look at other functions we might want to set breakpoints on, using

   info function time

to find all the functions with time in the name. Three of these functions stand
out, compare_atime, compare_ctime, and compare_mtime. We set breakpoints on each
of these functions with

   break ls.c:compare_atime
   break ls.c:compare_ctime
   break ls.c:compare_mtime

and then
    run ../coreutils-with-bug/bin/ls -lt --full-time wwi-armistice now now1

to see if any of the functions are used.

The first breakpoint we hit is in the compare_mtime function. Stepping through
the function shows that this function calls the cmp_mtime function, which
itself calls the timespec_cmp function.
   
   info function timespec_cmp

tells us that timespec_cmp is in the timespec.h header file

The timespec_cmp function does the following:

    timespec_cmp (struct timespec a, struct timespec b)
    {
	int diff = a.tv_sec - b.tv_sec;
	return diff ? diff : a.tv_nsec - b.tv_nsec;
    }

This means that if a<b, the function returns a negative value, if a=b, the
function returns 0, and if a>b, the function returns a positive value. However,
the lines
    int diff = a.tv_sec - b.tv_sec;
    return diff ? diff : a.tv_nsec - b.tv_nsec;
have the potential to cause integer overflow.

We can fix this error by replacing this code with the following:

if (a.tv_sec > b.tv_sec)
   return 1;
else if (a.tv_sec < b.tv_sec)
   return -1;
else
   if (a.tv_nsec > b.tv_nsec)
      return 1;
   else if (a.tv_nsec < b.tv_nsec)
      return -1;
   else
      return 0;

These changes are reflected in lab5.diff, which was made using

      diff -u timespec.h timespec_new.h < lab5.diff

The patch was then applied using

    patch -p1 < lab5.diff

from the coreutils-with-bug folder.
    
---


When I tried the same test code in the home directory, another issue arose. The
time displayed in ls -lt for the wwi-armistice was in 2054, not 1918.

This may be because the /tmp directory in which the other tests were run is
mounted on a different filesystem than the /u/ directory that the home is in.

